welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
def faireV {
  var nbPas=0
  for (i<-1 to 2) {
    avance
  }
  baisseBrosse
  gauche;
  leveBrosse
  avance;
  droite;
  avance;
  baisseBrosse;
  droite;
  leveBrosse;
  avance;
  gauche;
  avance;
  baisseBrosse;
  nbPas=0;
  leveBrosse;
  for (i<-1 to 2) {
    avance
  }
  gauche
}

override def run() {
  for (u<-1 to 3) {
    faireMotif;
  }
}


def faire3v() {
  for (i<- 1 to 3) {
    for (n <- 1 to 4) {
      faireV;
    }
    for (j<- 1 to 7) {
     avance;
    }
  }
}



def faireMotif {
  faire3v;
  retour;
}

def retour {
  gauche;
  for (i<-1 to 7) {
    avance
  }
  droite
}
}